# waves

./: CMakeLists.txt  README.md  compile_flags.txt
include/waves/: wav.h
src/: main.c  wav.c
